--- a/nginx.conf
+++ b/nginx.conf
@@ -47,11 +47,11 @@ http {
           root   /usr/share/nginx/html;
           try_files $uri /images/placeholder.jpg;
         }
-        location /api/catalogue/ { proxy_pass http://localhost:8080/; }
-        location /api/user/ { proxy_pass http://localhost:8080/; }
-        location /api/cart/ { proxy_pass http://localhost:8080/; }
-        location /api/shipping/ { proxy_pass http://localhost:8080/; }
-        location /api/payment/ { proxy_pass http://localhost:8080/; }
+        location /api/catalogue/ { proxy_pass http://catalogue.dev.rdevopsb80.online:8080/; }
+        location /api/user/ { proxy_pass http://user.dev.rdevopsb80.online:8080/; }
+        location /api/cart/ { proxy_pass http://cart.dev.rdevopsb80.online:8080/; }
+        location /api/shipping/ { proxy_pass http://shipping.dev.rdevopsb80.online:8080/; }
+        location /api/payment/ { proxy_pass http://payment.dev.rdevopsb80.online:8080/; }
 
         location /health {
           stub_status on;
