--- a/user.service
+++ b/user.service
@@ -3,8 +3,8 @@ Description = User Service
 [Service]
 User=roboshop
 Environment=MONGO=true
-Environment=REDIS_URL='redis://localhost:6379'
-Environment=MONGO_URL="mongodb://localhost:27017/users"
+Environment=REDIS_URL='redis://redis.dev.rdevopsb80.online:6379'
+Environment=MONGO_URL="mongodb://mongo.dev.rdevopsb80.online:27017/users"
 ExecStart=/bin/node /app/server.js
 SyslogIdentifier=user
 
